# performance

./: .gitignore  conversation_summary.md  pytest.ini  requirements.txt
entropy_tokenizer_v2/stage3/: README.md  __init__.py  alpha_pipeline.py  alpha_rename.py  deep-research-report (5).md  guardrail.py  hybrid_ab.py  pyproject.toml  router.py
entropy_tokenizer_v2/stage3/aliasing/: __init__.py  alias_codec.py
entropy_tokenizer_v2/stage3/backends/: __init__.py  base.py  hybrid_ab_backend.py  legacy_backend.py  plan_a_backend.py
entropy_tokenizer_v2/stage3/exact/: __init__.py  alias_codec.py
entropy_tokenizer_v2/stage3/examples/: build_codebook_demo.py  sample_literals.csv
entropy_tokenizer_v2/stage3/lexical/: __init__.py  semantic_codec.py  string_classifier.py
entropy_tokenizer_v2/stage3/literal_codec/: __init__.py  alias_pool.py  config.py  exceptions.py  types.py
entropy_tokenizer_v2/stage3/literal_codec/codebook/: __init__.py  assigner.py  candidate_pool.py  decoder.py  encoder.py  models.py  optimizer.py  prefix_constraints.py  trie.py
entropy_tokenizer_v2/stage3/literal_codec/drift/: base.py  (+2 more)
entropy_tokenizer_v2/stage3/routing/: __init__.py  router.py  rules.py
entropy_tokenizer_v2/stage3/semantic_cluster/: __init__.py  semantic_codec.py  string_classifier.py
entropy_tokenizer_v2/stage3/tests/: test_ab_router.py  test_alias_codec.py  test_assigner.py  test_candidate_pool.py  test_entropy.py  test_frequency.py  test_pipeline.py  test_post_prune_smoke.py  test_roundtrip.py  test_router.py  test_semantic_codec.py  test_string_filter.py  test_trie.py
(+217 files in other folders)
