[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "literal-codec-stage3"
version = "0.1.0"
description = "Stage3 offline literal compression system (Plan A)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
tiktoken = [
  "tiktoken>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
